// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductGrid component when view is grid 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="main__product_wrapper"
      >
        <div
          class="container-inner"
        >
          <div
            class="product-block-inner product-active"
          >
            <div
              class="img-prod_wrapper"
            >
              <a
                class="product__img_link"
                href="/product/1"
              >
                <img
                  alt="image product"
                  class="product__img"
                  src="https://envatopixel.com/wordpress/plantlish/wp-content/uploads/2021/07/2.webp"
                />
              </a>
            </div>
            <div
              class="product__info_wrapper"
            >
              <a
                class="product__img_link"
                href="/product/1"
              >
                <div
                  class="product__text_wrapper"
                >
                  <h3
                    class="product__text-name"
                  >
                    Biotech
                  </h3>
                  <h4
                    class="product__description_card"
                  >
                    Fast, a plot of land is selected.
                  </h4>
                  <h4
                    class="product__brand_card"
                  >
                    Brand: 
                    London-Plants&Co
                  </h4>
                  <h4
                    class="product__category_card"
                  >
                    Category: 
                    Aeonium
                  </h4>
                  <h4
                    class="product__rating_card"
                  >
                    Rating: 
                    4
                  </h4>
                  <h4
                    class="product__stock_card"
                  >
                    In Stock: 
                    3
                  </h4>
                  <h4
                    class="product__price_card"
                  >
                    Price: $
                    25
                  </h4>
                </div>
              </a>
              <div
                class="product__quantity"
              >
                <div
                  class="product__btn_wrapper"
                >
                  <button
                    class="product__btn"
                  >
                    Drop from cart
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="main__product_wrapper"
    >
      <div
        class="container-inner"
      >
        <div
          class="product-block-inner product-active"
        >
          <div
            class="img-prod_wrapper"
          >
            <a
              class="product__img_link"
              href="/product/1"
            >
              <img
                alt="image product"
                class="product__img"
                src="https://envatopixel.com/wordpress/plantlish/wp-content/uploads/2021/07/2.webp"
              />
            </a>
          </div>
          <div
            class="product__info_wrapper"
          >
            <a
              class="product__img_link"
              href="/product/1"
            >
              <div
                class="product__text_wrapper"
              >
                <h3
                  class="product__text-name"
                >
                  Biotech
                </h3>
                <h4
                  class="product__description_card"
                >
                  Fast, a plot of land is selected.
                </h4>
                <h4
                  class="product__brand_card"
                >
                  Brand: 
                  London-Plants&Co
                </h4>
                <h4
                  class="product__category_card"
                >
                  Category: 
                  Aeonium
                </h4>
                <h4
                  class="product__rating_card"
                >
                  Rating: 
                  4
                </h4>
                <h4
                  class="product__stock_card"
                >
                  In Stock: 
                  3
                </h4>
                <h4
                  class="product__price_card"
                >
                  Price: $
                  25
                </h4>
              </div>
            </a>
            <div
              class="product__quantity"
            >
              <div
                class="product__btn_wrapper"
              >
                <button
                  class="product__btn"
                >
                  Drop from cart
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProductGrid component when view is line 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="main__product_wrapper line"
      >
        <div
          class="container-inner"
        >
          <div
            class="product-block-inner product-active"
          >
            <div
              class="img-prod_wrapper"
            >
              <a
                class="product__img_link"
                href="/product/1"
              >
                <img
                  alt="image product"
                  class="product__img"
                  src="https://envatopixel.com/wordpress/plantlish/wp-content/uploads/2021/07/2.webp"
                />
              </a>
            </div>
            <div
              class="product__info_wrapper"
            >
              <a
                class="product__img_link"
                href="/product/1"
              >
                <div
                  class="product__text_wrapper"
                >
                  <h3
                    class="product__text-name"
                  >
                    Biotech
                  </h3>
                  <h4
                    class="product__description_card"
                  >
                    Fast, a plot of land is selected.
                  </h4>
                  <h4
                    class="product__brand_card"
                  >
                    Brand: 
                    London-Plants&Co
                  </h4>
                  <h4
                    class="product__category_card"
                  >
                    Category: 
                    Aeonium
                  </h4>
                  <h4
                    class="product__rating_card"
                  >
                    Rating: 
                    4
                  </h4>
                  <h4
                    class="product__stock_card"
                  >
                    In Stock: 
                    3
                  </h4>
                  <h4
                    class="product__price_card"
                  >
                    Price: $
                    25
                  </h4>
                </div>
              </a>
              <div
                class="product__quantity"
              >
                <div
                  class="product__btn_wrapper"
                >
                  <button
                    class="product__btn"
                  >
                    Drop from cart
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="main__product_wrapper line"
    >
      <div
        class="container-inner"
      >
        <div
          class="product-block-inner product-active"
        >
          <div
            class="img-prod_wrapper"
          >
            <a
              class="product__img_link"
              href="/product/1"
            >
              <img
                alt="image product"
                class="product__img"
                src="https://envatopixel.com/wordpress/plantlish/wp-content/uploads/2021/07/2.webp"
              />
            </a>
          </div>
          <div
            class="product__info_wrapper"
          >
            <a
              class="product__img_link"
              href="/product/1"
            >
              <div
                class="product__text_wrapper"
              >
                <h3
                  class="product__text-name"
                >
                  Biotech
                </h3>
                <h4
                  class="product__description_card"
                >
                  Fast, a plot of land is selected.
                </h4>
                <h4
                  class="product__brand_card"
                >
                  Brand: 
                  London-Plants&Co
                </h4>
                <h4
                  class="product__category_card"
                >
                  Category: 
                  Aeonium
                </h4>
                <h4
                  class="product__rating_card"
                >
                  Rating: 
                  4
                </h4>
                <h4
                  class="product__stock_card"
                >
                  In Stock: 
                  3
                </h4>
                <h4
                  class="product__price_card"
                >
                  Price: $
                  25
                </h4>
              </div>
            </a>
            <div
              class="product__quantity"
            >
              <div
                class="product__btn_wrapper"
              >
                <button
                  class="product__btn"
                >
                  Drop from cart
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
